--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # Corrections? Improvements? Create a GitHub issue:
 # http://github.com/RailsApps/rails-composer/issues
 #----------------------------------------------------------------------------
+/config/secrets.yml
 
 # bundler state
 /.bundle
